[package]
name = "basic-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "../embassy-stable4/embassy-embedded-hal", features = ["defmt"] }
embassy-executor = { version = "0.4.0", path = "../embassy-stable4/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", path = "../embassy-stable4/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.2.0", path = "../embassy-stable4/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
fixed = "1.24.0"
fixed-macro = "1.2.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
pio = "0.2.1"
smart-leds = "0.3.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
